--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,3 +1,48 @@
 
 
 @import './modules/home';
+
+
+
+.mine-container{
+    header{
+        width: 100%;
+        height: 1.1733rem;
+        background-image: linear-gradient(90deg,#0af,#0085ff);
+        line-height: 1.1733rem;
+        position: relative;
+        h1{
+            display: block;
+            width: 0.96rem;
+            height: 100%;
+            font-size: 0.48rem;
+            color: #fff;
+            margin: 0 auto;
+        }
+        img{
+            position: absolute;
+            width: 0.32rem;
+            top: 0.3333rem;
+            left: 0.4rem;
+        }
+    }
+    .profile{
+        width: 100%;
+        height: 2.9333rem;
+        background-image: linear-gradient(90deg,#0af,#0085ff);
+        padding: 0.6667rem 0.4rem;
+        display: flex;
+        align-items: center;
+        img{
+            border-radius: 50%;
+        }
+        .profile-titile{
+            margin-left: 0.48rem;
+            p:nth-of-type(1){
+                font-size: 0.56rem;
+                font-weight: 700;
+                color: #fff;
+            }
+        }
+    }
+}
