--- a/src/css/modules/_home.scss
+++ b/src/css/modules/_home.scss
@@ -2,10 +2,9 @@
 div{
     box-sizing: border-box;
 }
-#root{
-    width: 10rem;
-    height: 17.786667rem;
-}
+.home-container{
+
+
 .header{
     width: 100%;
     height: 1.1867rem;
@@ -402,27 +401,6 @@ li .bottom .second{
     }
 }
 
-.footer{
-    box-sizing: border-box;
-    width: 100%;
-    height: 1.3333rem;
-    display: flex;
-    position: fixed;
-    padding-top: 0.1333rem;
-    bottom: 0;
-    background: #fff;
-    box-shadow: 0 -0.266667vw 0.533333vw rgba(0,0,0,.1);
-    color: #333;
-}
-.footer a{
-    display: flex;
-    flex-grow: 1;
-    justify-content: center;
-    align-items: center;
-    
 
 }
-.footer a:first-of-type>svg{
-    width: 5.333333vw;
-    height: 5.333333vw;
-}
+
