--- a/src/css/modules/_home.scss
+++ b/src/css/modules/_home.scss
@@ -2,10 +2,6 @@
 div{
     box-sizing: border-box;
 }
-#root{
-    width: 10rem;
-    height: 17.786667rem;
-}
 .header{
     width: 100%;
     height: 1.1867rem;
@@ -401,28 +397,58 @@ li .bottom .second{
        display: none;
     }
 }
+.loading{
+    width: 10rem;
+    height: .666667rem;
+    display: none;
+    padding: .266667rem 0;
+    justify-content: center;
+    align-self: baseline;
+    margin-bottom: 2rem;
+    img{
+        width: .666667rem;
+        height: .666667rem;
+    }
+    span{
+        line-height: .666667rem;
+        margin-left: .266667rem;
+        color: #666;
+    }
+}
 
-.footer{
+
+#footer{
     box-sizing: border-box;
     width: 100%;
-    height: 1.3333rem;
+    height: 1.333333rem;
     display: flex;
     position: fixed;
     padding-top: 0.1333rem;
     bottom: 0;
     background: #fff;
     box-shadow: 0 -0.266667vw 0.533333vw rgba(0,0,0,.1);
-    color: #333;
-}
-.footer a{
-    display: flex;
-    flex-grow: 1;
-    justify-content: center;
-    align-items: center;
-    
-
-}
-.footer a:first-of-type>svg{
-    width: 5.333333vw;
-    height: 5.333333vw;
-}
+    justify-content: space-around;
+    a{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-decoration: none;
+        svg{
+            width: .533333rem;
+            height: .533333rem;
+            fill: #8e8e93;
+        }
+        span{
+            color: #8e8e93;
+            font-size: .266667rem;
+        }
+    }
+    .svg_span{
+        svg{
+            fill: #0089dc
+        }
+        span{
+            color: #0089dc
+        }
+    }
+} 
