--- a/src/css/modules/_home.scss
+++ b/src/css/modules/_home.scss
@@ -1,4 +1,5 @@
 *{margin: 0;padding: 0;}
+html{background-color: #f5f5f5;}
 div{
     box-sizing: border-box;
 }
@@ -418,6 +419,7 @@ li .bottom .second{
         color: #666;
     }
 }
+
 }
 
 #footer{
