--- a/src/css/modules/_home.scss
+++ b/src/css/modules/_home.scss
@@ -452,3 +452,34 @@ li .bottom .second{
         }
     }
 } 
+
+.home_nav{
+    position: fixed;
+    bottom: 2rem;
+    z-index: 999;
+    right: .266667rem;
+    width: 1.333333rem;
+    height: 2.666667rem;
+    .border{
+        border: 1px solid #999;
+        border-radius: 50%;
+        width: 1.133333rem;
+        height: 1.133333rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: .2rem;
+        background: #fff;
+    }
+    .cart svg{
+        height: .533333rem;
+        width: .533333rem;
+    }
+    .BackTop-wrapper img{
+        height: .533333rem;
+        width: .533333rem;
+    }
+    .BackTop-wrapper{
+        display: none;
+    }
+}  
