--- a/src/css/modules/_home.scss
+++ b/src/css/modules/_home.scss
@@ -1,7 +1,11 @@
 *{margin: 0;padding: 0;}
+html{background-color: #f5f5f5;}
 div{
     box-sizing: border-box;
 }
+.home-container{
+
+
 .header{
     width: 100%;
     height: 1.1867rem;
@@ -416,6 +420,7 @@ li .bottom .second{
     }
 }
 
+}
 
 #footer{
     box-sizing: border-box;
