--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -23,6 +23,76 @@ body,html{
                 width: 3.7333rem;
                 height: 1.4933rem;
             }
+            a{
+                display: block;
+                font-size: 0.3733rem;
+                font-weight: 700;
+                text-decoration: none;
+                color: #2395ff;
+                padding-bottom: 0.1067rem;
+                border-bottom: 4px solid #2395ff;
+            }
+        }
+        form{
+            position: relative;
+            input{
+                box-sizing: border-box;
+                width: 100%;
+                height: 1.28rem;
+                margin-top: 0.4267rem;
+                outline: none;
+                font-size: 0.3733rem;
+                border: 2px solid #ddd;
+                padding-left: 0.2667rem;
+                border-radius: 0.1067rem;
+                color: black;
+               
+                &:focus{
+                    border-color: #0089dc;
+                }
+            }
+            button:nth-of-type(1){
+                outline: none;
+                border: none;
+                padding: 0;
+                border-radius: 0.16rem;
+                // color: #2395ff;
+                color: #ccc;
+                background: transparent;
+                text-align: center;
+                font-size: 0.3733rem;
+                display: inline-block;
+                position: absolute;
+                top: 12%;
+                right: 0.2667rem;
+            }
+            .agree{
+                margin-top: 0.3733rem;
+                color: #999;
+                font-size: 0.3733rem;
+                line-height: 0.5333rem;
+                span{
+                    color: #2395ff;
+                }
+            }
+            button:nth-of-type(2){
+                display: block;
+                width: 100%;
+                height: 1.12rem;
+                font-size: 0.4267rem;
+                background-color: #4cd96f;
+                border: none;
+                margin-top: 0.8rem;
+                border-radius: 0.1067rem;
+                color: #fff;
+                cursor: pointer;
+                
+            }
+        }
+        .about{
+            margin-top: 0.5333rem;
+            text-align: center;
+            color: #999;
         }
     }
 }
