--- a/src/css/modules/_mine.scss
+++ b/src/css/modules/_mine.scss
@@ -36,13 +36,14 @@
         .profile-titile{
             flex-grow: 1;
             margin-left: 0.48rem;
-            p:nth-of-type(1){
+            a:nth-of-type(1){
                 font-size: 0.56rem;
                 font-weight: 700;
                 color: #fff;
                 margin-bottom: 0.2133rem;
+                text-decoration: none;
             }
-            p:nth-of-type(2){
+            p:nth-of-type(1){
                 svg{
                     fill: #fff;
                     width: 1.866667vw;
