--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,7 +1,9 @@
 
 
-@import './modules/home';
+@import 'modules/home';
 
-@import './modules/indent';
+@import 'modules/indent';
 
-@import './modules/mine'
+@import 'modules/mine';
+
+@import 'modules/indentdetail'
