--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -9,6 +9,7 @@ body,html{
     padding-top: 1.0667rem;
     width: 100%;
     display: flex;
+    flex-direction: column;
     box-sizing: border-box;
     .login-top{
         width: 8rem;
@@ -94,5 +95,21 @@ body,html{
             text-align: center;
             color: #999;
         }
+    }
+    .login-bottom{
+        margin-top: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 0.35rem;
+        .capion{
+           padding: 0.2667rem;
+            background-color: rgba(0,0,0,0.7);
+            color: #fff;
+            border-radius: 0.2667rem;
+            display: none;
+        }
+       
     }
 }
